# rollit

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
rollit/: __init__.py  core.py  stats.py
tests/: conftest.py  test_core.py  test_edge_cases.py  test_performance.py  test_stats.py
